src/main/resources/vulnerable-app.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# This file defines the services, service accounts, and deployments for the Bookinfo sample.
#
# To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
#
# Alternatively, you can deploy any resource separately:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
##################################################################################################

##################################################################################################
# vulnerable-app services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: vulnerable-app
  labels:
    app: vulnerable-app
    service: vulnerable-app
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: vulnerable-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-app-v1
  labels:
    app: vulnerable-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerable-app
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: vulnerable-app
        version: v1
    spec:
      serviceAccountName: bookinfo-vulnerable-app
      containers:
      - name: vulnerable-app
        image: zeddeespam/vulnerable-app-v1:zapp-1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
