src/main/resources/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vulnerable-app
spec:
  hosts:
  - vulnerable-app
  http:
  - route:
    - destination:
        host: productpage
